package com.amazon.ata.music.playlist.service.dynamodb;

import com.amazon.ata.music.playlist.service.dynamodb.models.Playlist;
import com.amazon.ata.music.playlist.service.exceptions.InvalidAttributeValueException;
import com.amazon.ata.music.playlist.service.exceptions.PlaylistNotFoundException;
import com.amazon.ata.music.playlist.service.util.MusicPlaylistServiceUtils;
import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBMapper;

/**
 * Accesses data for a playlist using {@link Playlist} to represent the model in DynamoDB.
 */
public class PlaylistDao {
    private final DynamoDBMapper dynamoDbMapper;

    /**
     * Instantiates a PlaylistDao object.
     *
     * @param dynamoDbMapper the {@link DynamoDBMapper} used to interact with the playlists table
     */
    public PlaylistDao(DynamoDBMapper dynamoDbMapper) {
        this.dynamoDbMapper = dynamoDbMapper;
    }

    /**
     * Returns the {@link Playlist} corresponding to the specified id.
     *
     * @param id the Playlist ID
     * @return the stored Playlist, or null if none was found.
     */
    public Playlist getPlaylist(String id) {
        Playlist playlist = this.dynamoDbMapper.load(Playlist.class, id);

        if (playlist == null) {
            throw new PlaylistNotFoundException("Could not find playlist with id " + id);
        }
        return playlist;
    }

    /**
     * Verifies a {@link Playlist} and generates an id
     *
     * @param playlist the playlist to be saved
     */

    public Playlist savePlaylist(Playlist playlist) {
        String requestedName = playlist.getName();
        String customerId = playlist.getCustomerId();
        String playlistId = MusicPlaylistServiceUtils.generatePlaylistId();
        if (!MusicPlaylistServiceUtils.isValidString(playlist.getName())) {
            throw new InvalidAttributeValueException("Invalid playlist name " + requestedName);
        }
        if (!MusicPlaylistServiceUtils.isValidString(playlist.getCustomerId())) {
            throw new InvalidAttributeValueException("Invalid customer id " + customerId);
        }
        playlist.setId(playlistId);
        dynamoDbMapper.save(playlist);
        return playlist;
    }
}
